Adding initial job